[package]
name = "rust-reqwest-warp-example"
version = "0.1.0"
authors = ["Eduard Kyvenko <eduard.kyvenko@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
log = "0.4"
pretty_env_logger = "0.4.0"